--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,4 +33,4 @@ jobs:
           echo "C:\v" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Run tests
-        run: v test . -enable-globals
+        run: v -enable-globals test .
