--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -16,6 +16,7 @@ jobs:
 
     - name: Install V
       run: |
+        mkdir tmp
         git clone https://github.com/vlang/v /tmp/v
         /tmp/v/v -version
 
