--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -25,8 +25,7 @@ jobs:
       run: |
         rm -rf docs
         mkdir -p docs
-        /tmp/v/v doc -f html -o ./docs/ ./graphs
-        mv docs/graphs.html docs/index.html
+        /tmp/v/v doc -readme -m -f html -o ./docs .
 
     - name: Add .nojekyll and optional config
       run: |
