--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,4 +33,4 @@ jobs:
           echo "$env:TEMP\vlang" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Run your project tests
-        run: v -enable-globals test .
+        run: v test .
